# Metro_TxT_RPG

./: CMakeLists.txt  README.md  SavesNames.txt  UML.drawio  uml
F_UML/: .$uml.bkp  uml
Game/: BattleManager.cpp  BattleManager.h  Character.cpp  Character.h  Game.cpp  Utilities.cpp  Utilities.h
Game/Characters/: Character.cpp  Character.h
Game/Fight/: BattleManager.cpp  BattleManager.h
Game/Items/: Item.cpp  Item.h
Game/World/: Events.cpp  Events.h  NPC.cpp  NPC.h  Station.cpp  Station.h  World.cpp  World.h
data/: boss.txt  boss_data.json  character_classes.json  character_data.json  character_data.txt  enemies.txt  enemy_data.json  huckster_data.txt  huckster_hist.txt  mechanic_data.txt  mechanic_hist.txt  medic_data.txt  medic_hist.txt  menus_data.json  shop_items.json  shop_items.txt  some_numeric.json  texts_data.json  warrior_data.txt  warrior_hist.txt
include/: AssetManager.h  Character.h  Game.h  utils.h
src/: AssetManager.cpp  Character.cpp  Game.cpp  main.cpp  utils.cpp
